--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,248 @@
-<h1>Mi Portfolio
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./CSS/Style.css">
+  </head>
+  <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light bg-opacity-100 fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="https://argentinaprograma.inti.gob.ar/" target="_blank">
+                <img src="./Images/Logo_arg_programa.png" alt="Logo Argentina Programa" width="100">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Acerca de</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Experiencia</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Estudios</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Proyectos</b></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#"><b>Contacto</b></a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <button type="button" class="btn btn-primary">Login</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <div class="bg home"></div>
+    </header>
+    <section class="container-fluid bg-light border border-primary border-3 rounded-5" id="Profile">
+        <div class="row">
+          <div class="profile col-xl-2 img-fluid">
+              <img src="./Images/img-profile.jpg" alt="ML Gonzalez" class="rounded-circle border border-5 border-dark">
+          </div>
+          <div class="col-xl-4 text-start my-auto">
+            <h4><b>Matias Leonardo Gonzalez</b></h4>
+            <h6>Full Stack Developer Jr.</h6>
+          </div>
+          <div class="profile-Text col-xl-6 text-center">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, sequi architecto! At accusantium, magni cumque assumenda magnam eum dignissimos rerum quo mollitia quae! Ea at eius odio quam nesciunt quibusdam?</p>
+          </div>
+        </div>
+    </section>
+    <section class="container-fluid bg-light border border-primary border-3 rounded-5" id="Experiencia">
+      <div>
+        <h3 class="my-3 ms-5"><b>Experiencia Laboral</b></h3>
+        <ul>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_trabajo.png" alt="Logo Empresa" width="50px">
+              </div>
+              <div class="col-md-11 text-start">
+                <h6>Nombre Empresa</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam mollitia, voluptatibus eius atque corrupti alias quam sapiente explicabo pariatur tenetur obcaecati eaque voluptates reprehenderit, quasi sequi numquam. Ducimus, nostrum.</p>
+              </div>
+            </div>
+            <div class="separator"></div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_trabajo2.png" alt="Logo Empresa" width="50px">
+              </div>
+              <div class="col-md-11 text-start">
+                <h6>Nombre Empresa</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam mollitia, voluptatibus eius atque corrupti alias quam sapiente explicabo pariatur tenetur obcaecati eaque voluptates reprehenderit, quasi sequi numquam. Ducimus, nostrum.</p>
+              </div>
+            </div>
+            <div class="separator"></div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_trabajo3.png" alt="Logo Empresa" width="50px">
+              </div>
+              <div class="col-md-11 text-start">
+                <h6>Nombre Empresa</h6>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laboriosam mollitia, voluptatibus eius atque corrupti alias quam sapiente explicabo pariatur tenetur obcaecati eaque voluptates reprehenderit, quasi sequi numquam. Ducimus, nostrum.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="container-fluid bg-light border border-primary border-3 rounded-5" id="Estudios">
+      <div>
+        <h3 class="my-3 ms-5"><b>Estudios</b></h3>
+        <ul>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_instituto.png" alt="Logo Instituto" width="75px">
+              </div>
+              <div class="col-md-3 text-start">
+                <h6>Instituto</h6>
+                <p>Carrera o Título</p>
+              </div>
+              <div class="col-md-3 text-start my-auto">
+                <p>Periodo</p>
+              </div>
+            </div>
+            <div class="separator"></div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_instituto2.png" alt="Logo Instituto" width="75px">
+              </div>
+              <div class="col-md-3 text-start">
+                <h6>Instituto</h6>
+                <p>Carrera o Título</p>
+              </div>
+              <div class="col-md-3 text-start my-auto">
+                <p>Periodo</p>
+              </div>
+            </div>
+            <div class="separator"></div>
+          </li>
+          <li>
+            <div class="row">
+              <div class="col-md-1">
+                <img src="./Images/Logo_instituto3.png" alt="Logo Instituto" width="75px">
+              </div>
+              <div class="col-md-3 text-start">
+                <h6>Instituto</h6>
+                <p>Carrera o Título</p>
+              </div>
+              <div class="col-md-3 text-start my-auto">
+                <p>Periodo</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="container-fluid bg-light border border-primary border-3 rounded-5" id="Skills">
+      <h3 class="my-3 ms-5"><b>Skills</b></h3>
+      <div class="row">
+        <div class="col mx-2">          
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Hard Skill 1</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mx-2">
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Hard Skill 2</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mx-2">
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Hard Skill 3</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="separator"></div>
+      <div class="row mb-5">
+        <div class="col mx-2">          
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Soft Skill 1</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mx-2">
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Soft Skill 2</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+        <div class="col mx-2">
+          <div class="card text-center border border-3 border-dark rounded-5" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Soft Skill 3</h5>
+              <p class="card-text fs-1">XX%</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid bg-light border border-primary border-3 rounded-5" id="Proyectos">
+      <h3 class="my-3 ms-5"><b>Proyectos</b></h3>
+      <div class="row">
+        <div class="col-xl-3 img-fluid">
+          <img class="project-img" src="./Images/Logo_proyecto.png" alt="Proyecto">
+        </div>
+        <div class="col-xl-9 text-start my-3">
+          <h6>PROYECTO 1</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nemo fugit soluta porro. Iure culpa fugit consectetur enim, ducimus harum suscipit blanditiis maiores deleniti doloremque modi. Error soluta molestiae atque neque voluptatibus suscipit nesciunt animi eligendi veritatis, minus quaerat! Eaque architecto quia eos repellat porro aliquam mollitia maxime alias esse inventore? Ipsam adipisci, cumque, cum vel odio blanditiis deserunt quia doloribus animi maiores quo ullam praesentium iste a nulla quasi expedita itaque assumenda dolores reiciendis aperiam ducimus eaque culpa quos!</p>   
+          <a href="#">Ir a proyecto</a>
+        </div>
+      </div>
+      <div class="separator"></div>
+      <div class="row">
+        <div class="col-xl-3 img-fluid">
+          <img class="project-img" src="./Images/Logo_proyecto.png" alt="Proyecto">
+        </div>
+        <div class="col-xl-9 text-start my-3">
+          <h6>PROYECTO 2</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nemo fugit soluta porro. Iure culpa fugit consectetur enim, ducimus harum suscipit blanditiis maiores deleniti doloremque modi. Error soluta molestiae atque neque voluptatibus suscipit nesciunt animi eligendi veritatis, minus quaerat! Eaque architecto quia eos repellat porro aliquam mollitia maxime alias esse inventore? Ipsam adipisci, cumque, cum vel odio blanditiis deserunt quia doloribus animi maiores quo ullam praesentium iste a nulla quasi expedita itaque assumenda dolores reiciendis aperiam ducimus eaque culpa quos!</p>
+          <a href="#">Ir a proyecto</a>
+        </div>
+      </div>
+      <div class="separator"></div>
+      <div class="row">
+        <div class="col-xl-3 img-fluid">
+          <img class="project-img" src="./Images/Logo_proyecto.png" alt="Proyecto">
+        </div>
+        <div class="col-xl-9 text-start my-3">
+          <h6>PROYECTO 3</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nemo fugit soluta porro. Iure culpa fugit consectetur enim, ducimus harum suscipit blanditiis maiores deleniti doloremque modi. Error soluta molestiae atque neque voluptatibus suscipit nesciunt animi eligendi veritatis, minus quaerat! Eaque architecto quia eos repellat porro aliquam mollitia maxime alias esse inventore? Ipsam adipisci, cumque, cum vel odio blanditiis deserunt quia doloribus animi maiores quo ullam praesentium iste a nulla quasi expedita itaque assumenda dolores reiciendis aperiam ducimus eaque culpa quos!</p>
+          <a href="#">Ir a proyecto</a>
+        </div>
+      </div>
+    </section>
 
-</h1>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  </body>
+</html>
